init swagger  add README
