# market-manager/cmd/docs/swagger.json
@@ -2,7 +2,7 @@
     "swagger": "2.0",
     "info": {
         "description": "Market Manager API Server",
-        "title": "Market Manager swagger",
+        "title": "Market Manager Api",
         "contact": {},
         "version": "1.0"
     },
@@ -19,10 +19,10 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/common.Err"
+                        }
                     }
                 }
             }
@@ -35,13 +35,119 @@
                 "produces": [
                     "application/json"
                 ],
+                "parameters": [
+                    {
+                        "description": "cpod job info",
+                        "name": "req",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/common.CpodJobInfo"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": "OK"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/common.Err"
+                        }
                     }
+                }
+            }
+        },
+        "/api/v1/cpod/resource": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "description": "cpod resource info",
+                        "name": "req",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/common.CpodResourceInfos"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/common.Err"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "common.CpodJobInfo": {
+            "type": "object",
+            "properties": {
+                "cpod_job_id": {
+                    "type": "string"
+                },
+                "job_id": {
+                    "type": "string"
+                },
+                "job_url": {
+                    "type": "string"
+                },
+                "state": {
+                    "type": "integer"
+                }
+            }
+        },
+        "common.CpodResourceInfo": {
+            "type": "object",
+            "properties": {
+                "cpod_id": {
+                    "type": "string"
+                },
+                "gpu_free": {
+                    "type": "number"
+                },
+                "gpu_total": {
+                    "type": "number"
+                },
+                "gpu_used": {
+                    "type": "number"
+                },
+                "group_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "common.CpodResourceInfos": {
+            "type": "object",
+            "properties": {
+                "cpods": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/common.CpodResourceInfo"
+                    }
+                }
+            }
+        },
+        "common.Err": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "description": "业务编码",
+                    "type": "integer"
+                },
+                "data": {
+                    "description": "成功时返回的数据"
+                },
+                "msg": {
+                    "description": "错误描述",
+                    "type": "string"
                 }
             }
         }
